--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ https://templatemo.com/tm-531-reflux
                 <h4>Mi proyecto</h4>
                 <p>
                   Es tener mas experiencia aprender nuevas cosas y conceptos y a base del tiempo costruir un equipo de
-                  trabajo
+                  trabajo 
                 </p>
                 <div class="white-button">
-                  <a href="#">Read More</a>
+                  <a href="#En que soy bueno"></a>
                 </div>
               </div>
             </div>
@@ -103,7 +103,7 @@ https://templatemo.com/tm-531-reflux
     <section class="section my-services" data-section="section2">
       <div class="container">
         <div class="section-heading">
-          <h2>En que soy bueno?</h2>
+          <h2 id>En que soy bueno?</h2>
           <div class="line-dec"></div>
           <span>Estas son mis aprendizajes y lo que quiero aprender con estudio y ayuda.</span>
         </div>
