--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ https://templatemo.com/tm-531-reflux
     <section class="section my-services" data-section="section2">
       <div class="container">
         <div class="section-heading">
-          <h2 id>En que soy bueno?</h2>
+          <h2 id="En que soy bueno">En que soy bueno?</h2>
           <div class="line-dec"></div>
           <span>Estas son mis aprendizajes y lo que quiero aprender con estudio y ayuda.</span>
         </div>
