--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ https://templatemo.com/tm-531-reflux
                   trabajo 
                 </p>
                 <div class="white-button">
-                  <a href="#En que soy bueno"></a>
+                  <a href="#En que soy bueno">mas sobre mi</a>
                 </div>
               </div>
             </div>
